# QtChessGUI

./: CMakeLists.txt  README.md  main.cpp
data/icons/: QtChessGUI_icons.qrc
data/images/: QtChessGUI_images.qrc
data/qml/: QtChessGUI_qml.qrc
data/qml/QtChessGUI/: main.qml
data/qml/QtChessGUI/Widgets/: ChessView.qml  DragIcon.qml  DropTile.qml  qmldir
src/QtChessGUI/: ChessBoard.h  ChessViewController.cpp  ChessViewController.h
